# ntru

./: CMakeLists.txt  README.md  main.cpp
hdrs/: algorithm.h  euclid.h  polynom.h
src/: algorithm.cpp  euclid.cpp  polynom_func.cpp  polynom_oper.cpp
